FIX: Arreglo de la funcionalidad del ejecutable